# NewsProject

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
config/: alerts.yml  channels.yml  entity_aliases.yml  holdings.yml  secrets.yml.example  sources.yml  watchlist.yml
config/common/: README.md  app.yml  channels.yml  secrets.yml.example
config/news_pipeline/: README.md  sources.yml
config/news_pipeline/prompts/: tier1_summarize.v1.yaml  tier2_extract.v1.yaml  tier3_deep_analysis.v1.yaml
config/prompts/: tier0_classify.v1.yaml
config/quote_watcher/: README.md  alerts.yml  quote_watchlist.yml
docker/: Dockerfile  compose.yml  entrypoint.sh
docs/: architecture.md  glossary.md  index.md
docs/components/: charts.md  classifier.md  commands.md  dedup.md  dispatch-router.md  llm-pipeline.md  observability.md  pushers.md  rules.md  scheduler.md  scrapers.md  storage.md
docs/getting-started/: architecture.md  deployment-current.md  overview.md
docs/operations/: backup.md  configuration.md  daily-ops.md  monitoring.md  secrets.md  troubleshooting.md  upgrading.md
docs/quote_watcher/: getting_started.md
docs/reference/: architecture-decisions.md  changelog.md  config-schema.md  db-schema.md  llm-cost.md
docs/runbook/: backup.md  next-steps.md  operations.md
docs/subsystems/: news_pipeline.md  quote_watcher.md  shared.md
docs/superpowers/plans/: 2026-04-25-news-pipeline-impl.md  2026-04-26-watchlist-rules-impl.md  2026-05-08-quote-watcher-impl-A.md  2026-05-09-quote-watcher-impl-B.md
docs/superpowers/reviews/: 2026-04-25-impl-mvp-review.md
scripts/: add_app_collaborator.py  alembic_quotes.ini  backup_sqlite.sh  diagnose_feishu.py  init_feishu_table.py  migrate_watchlist_v0_3_0.py  restore_sqlite.sh
src/news_pipeline/: README.md  healthcheck.py  main.py
src/quote_watcher/: README.md  main.py
src/shared/: README.md
tests/eval/: gold_news.jsonl  test_extraction_quality.py
tests/integration/: test_backup_script.py  test_main_smoke.py
(+271 files in other folders)
