[project]
name = "news-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "sqlmodel>=0.0.21",
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "feedparser>=6.0",
  "structlog>=24.1",
  "watchdog>=4.0",
  "anthropic>=0.40",
  "dashscope>=1.20",
  "akshare>=1.13",
  "tushare>=1.4",
  "yfinance>=0.2.50",
  "mplfinance>=0.12.10b0",
  "matplotlib>=3.9",
  "python-telegram-bot>=21",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "aiolimiter>=1.1",
  "simhash>=2.1",
  "pyyaml>=6.0",
  "tenacity>=9.0",
  "greenlet>=3.4.0",
  "beautifulsoup4>=4.12",
  "pyahocorasick>=2.3.0",
  "asteval>=1.0.8",
  "chinese-calendar>=1.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "freezegun>=1.5",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-pyyaml>=6.0",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0",
  "types-requests>=2.33.0.20260508",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","W","I","B","UP","SIM","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/unit/config/test_loader.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# SQLAlchemy/SQLModel stubs don't fully type column expressions;
# suppress known false-positives in DAOs and generated migration.
module = [
    "news_pipeline.storage.dao.*",
    "news_pipeline.storage.migrations.*",
    "news_pipeline.observability.log",
    "news_pipeline.charts.sentiment",
    "news_pipeline.commands.server",
    "news_pipeline.scrapers.cn.ths",
    "news_pipeline.healthcheck",
]
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_pipeline", "src/shared", "src/quote_watcher"]
